paint app using django

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -41,7 +41,7 @@ background-color:white;
 }
 footer {
     width:100%;
-    background-color:#ffb3b3;
+    background-color:black;
     position: fixed;
     bottom: 0;
 }
@@ -53,8 +53,8 @@ footer div {
     margin:0 auto;
     padding:0px 0 25px 0px;
     text-align:center;
-
+    color:white;
 }
 footer div a{
-    color:black;
+    color:white;
 }
